--- a/task3.html
+++ b/task3.html
@@ -7,15 +7,19 @@
     <meta name="description" content="Lab1_task3" />
     <meta name="keywords" content="HTML, epam, KPI, Lab" />
     <meta name="author" content="Hanna Arnautova" />
-
+    <style>
+      table,
+      td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        text-align: center;
+        width: 30%;
+      }
+    </style>
     <title>Task 3: Table</title>
   </head>
   <body>
-    <table
-      border="1"
-      width="30%"
-      summary="This table contains different numbers."
-    >
+    <table summary="This table contains different numbers.">
       <tr>
         <td rowspan="2">1</td>
         <td>2</td>
